--- a/src/style/Report.css
+++ b/src/style/Report.css
@@ -7,18 +7,22 @@
     border: 1px solid #e2e2e4;
     position: absolute;
     display: flex;
+    background: #FCFCFC;
 }
 
 .report-reason{
     width: 30rem;
-    height: 10rem;
-    top: 372px;
-    left: 28rem;
-    border-radius: 20px;
-    border: 1px solid #e2e2e4;
+    height: auto;
     position: absolute;
+    top: 113%;
+    left: 0;
+    right: 0;
+    margin-left: 10px;
+    border-radius: 15px;
+    border: 1px solid #e2e2e4;
     display: flex;
     padding: 20px;
+    background: #FCFCFC;
 }
 
 .reason-text{
@@ -28,7 +32,7 @@ font-weight: 400;
 line-height: 18px;
 letter-spacing: 0em;
 text-align: left;
-
+text-transform: capitalize;
 }
 
 .left-report-side{
@@ -45,27 +49,26 @@ margin-top: 1.8rem;
 }
 
 .phases-report-heading{
-    font-family: Poppins;
+font-family: Poppins;
 font-size: 13px;
 font-weight: 500;
-line-height: 20px;
+line-height: 12px;
 letter-spacing: 0em;
 text-align: left;
 position: relative;
 bottom: 2.5rem;
-    left: 3rem;
-
+left: 3rem;
+display: flex;
+flex-direction: column;
 }
 
 .Date-time-report-text{
-    font-family: Montserrat;
+font-family: Montserrat;
 font-size: 10px;
 font-weight: 400;
-line-height: 12px;
+line-height: 20px;
+margin-top: 7px;
 letter-spacing: 0em;
-text-align: left;
-margin-left: 11px;
-
 }
 
 .aproved-report-btn{
@@ -107,30 +110,33 @@ top: 2rem;
     border: 1px solid #DD2025;
     border-radius: 6px;
     width: 10rem;
-    height: 2rem;
-    color: white;
-    font-family: Poppins;
+height: 2rem;
+color: white;
+font-family: Poppins;
 font-size: 10px;
 font-weight: 400;
 line-height: 15px;
 letter-spacing: 0em;
-margin-top: 4.2rem;
+margin-top: 0rem;
 }
 
 
 
 @media (max-width: 1440px) {
-    .report-reason {
-        width: 30rem;
-        height: 10rem;
-        top: 372px;
-        left: 19.4rem;
-        border-radius: 20px;
-        border: 1px solid #e2e2e4;
-        position: absolute;
-        display: flex;
-        padding: 20px;
-    }
+   .report-reason{
+    width: 30rem;
+    height: auto;
+    position: absolute;
+    top: 113%;
+    left: 0;
+    right: 0;
+    margin-left: 10px;
+    border-radius: 15px;
+    border: 1px solid #e2e2e4;
+    display: flex;
+    padding: 20px;
+    background: #FCFCFC;
+}
     .Report-1 {
         width: 32.4rem;
         height: 44rem;
@@ -155,17 +161,20 @@ margin-top: 4.2rem;
         position: absolute;
         display: flex;
     }
-    .report-reason {
-        width: 30rem;
-        height: 10rem;
-        top: 372px;
-        left: 29.4rem;
-        border-radius: 20px;
-        border: 1px solid #e2e2e4;
-        position: absolute;
-        display: flex;
-        padding: 20px;
-    }
+    .report-reason{
+    width: 30rem;
+    height: auto;
+    position: absolute;
+    top: 113%;
+    left: 0;
+    right: 0;
+    margin-left: 10px;
+    border-radius: 15px;
+    border: 1px solid #e2e2e4;
+    display: flex;
+    padding: 20px;
+    background: #FCFCFC;
+}
    
   } 
 
@@ -180,17 +189,20 @@ margin-top: 4.2rem;
         position: absolute;
         display: flex;
     }
-    .report-reason {
-        width: 30rem;
-        height: 10rem;
-        top: 372px;
-        left: 22.4rem;
-        border-radius: 20px;
-        border: 1px solid #e2e2e4;
-        position: absolute;
-        display: flex;
-        padding: 20px;
-    }
+   .report-reason{
+    width: 30rem;
+    height: auto;
+    position: absolute;
+    top: 113%;
+    left: 0;
+    right: 0;
+    margin-left: 10px;
+    border-radius: 15px;
+    border: 1px solid #e2e2e4;
+    display: flex;
+    padding: 20px;
+    background: #FCFCFC;
+}
     
   }
 
