--- a/src/style/Sidenavbar.css
+++ b/src/style/Sidenavbar.css
@@ -12,6 +12,17 @@
 
 }
 
+.icons-sidebar{
+  width: 100%;
+  height: 100%;
+  margin-top: 6.8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: center;
+  position: relative;
+}
+
 .Logo{
   position: relative;
   right: 3px;
@@ -29,24 +40,18 @@
 
 
 .Home-icon{
-  position: absolute;
-  left: 2.6rem;
   width: 1.5rem;
-  top: 13.3rem;
 }
 
 
 .Notification-icon{
-  position: absolute;
-  left: 2.6rem;
-  top: 18rem;
   width: 1.5rem;
   }
 
   .icon-badge{
   position: absolute;
-  left: 3.1rem;
-  top: 17.4rem;
+  left: 3.2rem;
+  top: 3.8rem;
   width: 1.4rem;
   height: 1.4rem;
   border-radius: 50%;
@@ -57,51 +62,47 @@
   align-items: center;
   }
 
+  .icon-badge-message{
+  position: absolute;
+  left: 3.9rem;
+  top: 9.4rem;
+  width: .75rem;
+  height: .75rem;
+  border-radius: 50%;
+  background-color: #5D982E;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+
 
 .Message-icon{
-  position: absolute;
-  left: 2.1rem;
   width: 2rem;
-  top: 28rem;
 }
 
 .Calender-icon{
-  position: absolute;
-  left: 2.6rem;
-  top: 23rem;
   width: 1.5rem;
 }
 
 .Caseworker-icon{
-  position: absolute;
-  left: 2.6rem;
   width: 1.5rem;
-  top: 32.6rem;
-
 }
 
 .billing-icon{
-  position: absolute;
-    left: 2.7rem;
-
     width: 1.3rem;
-    top: 37.5rem;
 }
 
 
 .Setting-icon{
-  position: absolute;
-  left: 2.6rem;
   width: 1.5rem;
-  top: 42.2rem;
 }
 
 .Logout-icon{
   position: absolute;
   left: 2.6rem;
   width: 1.5rem;
-
-  top: 51.2rem;
+  bottom: 13rem;
 }
 
 
