--- a/src/style/prephase2.css
+++ b/src/style/prephase2.css
@@ -22,6 +22,13 @@
     overflow-x: hidden;
 }
 
+.pre-phase-2-div-inner{
+  width: 80%;
+  height: 42.2rem;
+  display: flex;
+  justify-content: center;
+}
+
 .Required-document-text{
   font-family: Poppins;
   font-size: 16px;
@@ -53,6 +60,11 @@
   letter-spacing: 0em;
   text-align: left;
   display: grid;
+}
+
+.checkboxes-prephase2{
+  top: 230px;
+  left: -65px;
 }
 
 .Other{
