--- a/src/style/prescreening.css
+++ b/src/style/prescreening.css
@@ -92,10 +92,9 @@
     letter-spacing: 0em;
     text-align: left;
     position: relative;
-    top: -17px;
+    top: -14.7px;
     left: 9px;
     color: white;
-
 }
 
 .Pre-screening-text{
@@ -161,12 +160,10 @@
 }
 
 .add-to-queue{
- 
     position: relative;
     left: 97px;
     top: 8px;
     width: 1.3rem;
-
 }
 
 .add-profile{
@@ -183,7 +180,7 @@
     letter-spacing: 0em;
     text-align: left;
     position: relative;
-    top: -18px;
+    top: -14.8px;
     left: 18px;
     color: white;
 }
@@ -196,7 +193,7 @@
     letter-spacing: 0em;
     text-align: left;
     position: relative;
-    top: -18px;
+    top: -16px;
     left: 18px;
     color: white;
 }
@@ -208,7 +205,7 @@
     letter-spacing: 0em;
     text-align: left;
     position: relative;
-    top: -12px;
+    top: -11.3px;
     left: 14px;
     color: white;
 }
@@ -229,9 +226,7 @@
 
 .preescreen-form-main{
     width: 37.6rem;
-
     height: 43.3rem;
-
     border-radius: 20px;
     border: 1px solid #E2E2E4;
     position: absolute;
@@ -242,7 +237,10 @@
     scrollbar-width: thin;
     scroll-behavior: smooth;
     font-size: 12px;
-
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
 }
 
 .preescreen-form{
@@ -250,34 +248,38 @@
     height: 500px;
     border-radius: 20px;
     border: 1px solid #E2E2E4;
-    position: absolute;
+    margin-top: .5rem;
+    /* position: absolute;
     left: 2%;
-    top: 13px;
+    top: 13px; */
 }
 
 .preescreen-form-second{
     width: 566px;
     /* height: 186px; */
     height: auto;
+    min-height: 140px;
     padding-bottom: 1.3rem;
     border-radius: 20px;
     border: 1px solid #E2E2E4;
-    position: absolute;
+    /* position: absolute;
     left: 2%;
-    top: 522px;
+    top: 522px; */
     max-height: 170px;
     overflow-y: auto;
+    margin-top: 1.6rem;
 }
 
 .preescreen-form-third{
     width: 567px;
-    height: 161px;
+    height: 171px;
     border-radius: 20px;
     border: 1px solid #E2E2E4;
     background-color: #D9D9D9;
-    position: absolute;
+    padding-bottom: 3.7rem;
+    /* position: absolute;
     left: 2%;
-    top: 717px;
+    top: 717px; */
 }
 
 .reject-btn{
@@ -299,12 +301,13 @@
     font-weight: 500;
     line-height: 18px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: right;
     text-decoration: underline;
-    position: relative;
+    margin-top: 3rem;
+    margin-right: 10px;
+    /* position: relative;
     left: 69%;
-
-  top: 10px;
+    top: 10px; */
 }
 
 .Text-input,
@@ -349,6 +352,21 @@
     border-radius: 15px;
 }
 
+.display-notes{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    align-items: center;
+}
+
+.notes-section-display{
+    width: 94%;
+    height: 64px;
+    background-color: #F7F7F7;
+    border-radius: 15px;
+}
+
 .Name-4{
     position: relative;
     left: 66px;
@@ -368,7 +386,6 @@
     letter-spacing: 0em;
     text-align: left;
     bottom: 17px;
-
   }
 
 
@@ -400,7 +417,7 @@
 .Submit-btn{
     position: relative;
     left: 80%;
-    top: 40px;
+    top: 45px;
     padding: 4px 19px 4px 19px;
     background-color: #5D982E;
     color: white;
@@ -411,7 +428,7 @@
 .Cancel-btn-2{
     position: relative;
     left: 47%;
-    top: 40px;
+    top: 45px;
     padding: 4px 19px 4px 19px;
     border: 1px solid white;
     border-radius: 5px;
