--- a/src/style/Report.css
+++ b/src/style/Report.css
@@ -8,21 +8,30 @@
     position: absolute;
     display: flex;
     background: #FCFCFC;
+    overflow-y: auto;
+    scrollbar-width: thin;
 }
 
 .report-reason{
-    width: 30rem;
+    width: 29.4rem;
     height: auto;
-    position: absolute;
-    top: 113%;
-    left: 0;
-    right: 0;
     margin-left: 10px;
     border-radius: 15px;
     border: 1px solid #e2e2e4;
     display: flex;
     padding: 20px;
     background: #FCFCFC;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.inner-report{
+    display: flex;
+    height: 5.1rem;
+    position: relative;
+    width: 100%;
+    margin-bottom: 16px;
 }
 
 .reason-text{
@@ -43,7 +52,7 @@ text-transform: capitalize;
 
 .right-report-side{
 width: 50rem;
-margin-top: 1.8rem;
+margin-top: 2rem;
 
     margin-left: 6rem;
 }
