--- a/src/style/SectionA.css
+++ b/src/style/SectionA.css
@@ -1,7 +1,6 @@
 
 .SectionA-container{
     display: flex;
-    
 }
 
 .calender{
@@ -10,9 +9,16 @@
   background-color: #fcfcfc;
   border: 1px solid #e2e2e4;
   box-sizing: border-box;
+  min-width: 19%;
   width: 47%;
   height: 148px;
   right: 74px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
 }
 
 .Message{
@@ -21,9 +27,16 @@
   background-color: #fcfcfc;
   border: 1px solid #e2e2e4;
   box-sizing: border-box;
+  min-width: 19%;
   width: 47%;
   height: 148px;
   right: 54px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
 
   }
 
@@ -34,9 +47,17 @@
   background-color: #fcfcfc;
   border: 1px solid #e2e2e4;
   box-sizing: border-box;
+  min-width: 19%;
   width: 47%;
   height: 148px;
   right: 34px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+
 }
 
 .Notes{
@@ -45,11 +66,16 @@
   background-color: #fcfcfc;
   border: 1px solid #e2e2e4;
   box-sizing: border-box;
+  min-width: 20%;
   width: 47%;
   height: 149px;
-
+  cursor: pointer;
   right: 14px;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
 
 }
 
@@ -59,24 +85,32 @@
   background-color: #fcfcfc;
   border: 1px solid #e2e2e4;
   box-sizing: border-box;
+  min-width: 20%;
   width: 48%;
   height: 148px;
   left: 8px;
+  cursor: pointer;
+   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+
 }
 
-.calender-img{
+/* .calender-img{
   position: relative;
   left: 54px;
   top: 27px;
   width: 65px;
-}
+} */
 
-.Message-img{
+/* .Message-img{
   position: relative;
   left: 58px;
   top: 26px;
   width: 65px;
-}
+} */
 
 .Prescrening-img{
   position: relative;
@@ -99,63 +133,70 @@
   width: 71px;
 }
 
+.SectionA-container>div{
+  width: 11.9rem;
+  min-width: auto;
+}
+
 
 .calender-text{
-  position: relative;
+  /* position: relative; */
   font-size: 14px;
   font-weight: 600;
   font-family: Poppins;
   color: #67725d;
   text-align: left;
-  left: 54px;
-  top: 30px;
+  /* left: 54px;
+  top: 30px; */
 }
 
 
 .Message-text{
-  position: relative;
+  /* position: relative; */
   font-size: 14px;
   font-weight: 600;
   font-family: Poppins;
   color: #67725d;
-  left: 59px;
-  top: 30px;
+  /* left: 59px;
+  top: 30px; */
 }
 
 .pre-screening-text{
-  position: relative;
+  /* position: relative; */
   font-size: 14px;
   font-weight: 600;
   font-family: Poppins;
   color: #67725d;
-  left: 41px;
-  top: 30px;
+  /* left: 41px;
+  top: 30px; */
 }
 
 .Notes-text-2{
-  position: relative;
+  /* position: relative; */
   font-size: 14px;
   font-weight: 600;
   font-family: Poppins;
   color: #67725d;
-  left: 68px;
-  top: 20px;
+  /* left: 68px;
+  top: 20px; */
 }
 
 .profile-text{
-  position: relative;
+  /* position: relative; */
   font-size: 14px;
   font-weight: 600;
   font-family: Poppins;
   color: #67725d;
-  left: 60px;
-  top: 26px;
+  margin-left: -18px;
+  /* left: 60px;
+  top: 26px; */
 }
 
 .SectionA-container{
   margin-top: 112px;
   position: relative;
   right: 55.6rem;
+  min-width: 59rem;
   width: 59rem;
 }
 
@@ -172,7 +213,12 @@
   .SectionA-container{
     right: 249%;
     width: 265%;
+    width: 413%;
+    min-width: 265%;
     margin-top: 125px;
+        display: flex;
+    justify-content: center;
+    align-items: center;
 }
   }
 
