--- a/src/style/prescreening.css
+++ b/src/style/prescreening.css
@@ -9,6 +9,38 @@
     margin-left: 127px;
 }
 
+.notes-item{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 15px;
+}
+
+.notes-item .notes-item-inner{
+    display: flex;
+    align-items: center;
+}
+
+.notes-item-inner .left-note{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 4px;
+}
+
+.notes-item-inner .left-note span:nth-child(1){
+    font-family: Poppins;
+    font-size: 12.5px;
+    font-weight: 500;
+    line-height: 15px;
+    letter-spacing: 0em;
+    border-right: 1px solid lightgray;
+    padding-right: 8px;
+}
+
 .case-worker-selector{
 
     width: 24.7rem;
@@ -362,7 +394,7 @@
 
 .notes-section-display{
     width: 94%;
-    height: 64px;
+    min-height: 115px;
     background-color: #F7F7F7;
     border-radius: 15px;
 }
